<resources>
    <string name="app_name">PRapp</string>
    <string name="text_for_term">Your only chance of survival, if you are sincerely smitten, lies in hiding this fact from the woman you love, of feigning a casual detachment under all circumstances. What sadness there is in this simple observation! What an accusation against man! However, it had never occurred to me to contest this law, nor to imagine disobeying it: love makes you weak, and the weaker of the two is oppressed, tortured and finally killed by the other, who in his or her turn oppresses, tortures and kills without having evil intentions, without even getting pleasure from it, with complete indifference; that’s what men, normally, call love.</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="agree">Agree</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
    <string name="check_internet_connection">Check internet connection</string>

    <string name="facebook_app_id">776088580500113</string>
    <string name="facebook_client_token">cedff5cb83eaf1efde8e93c43e310c6e</string>
</resources>